# AISubitleTranslator

./: .env.example  .gitattributes  .gitignore  AI_Subtitle_Translator.spec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PACKAGING.md  README.md  SECURITY.md  build_exe.bat  launch_gui.bat  launch_gui.pyw  pyproject.toml
src/ai_subtitle/: cli.py  config.py  game_ocr.py  gui.py  overlay.py  subtitles.py  transcribe.py  video_pipeline.py
src/ai_subtitle/providers/: __init__.py  base.py  openai_compatible.py
